:sparkles: Support onboarding issuer with cheqd or sov (#1549)
* :sparkles: Support onboarding issuer with cheqd or sov

* :art: Only add did:sov if unqualified

* :test_tube: Fix unit tests

* :memo: Update OpenAPI Specs
