# docs/openapi/tenant-admin-openapi.yaml
@@ -350,6 +350,19 @@ components:
           description: Optional per-tenant settings to configure wallet behaviour for advanced users.
           examples:
             - ACAPY_AUTO_ACCEPT_INVITES: false
+        did_method:
+          anyOf:
+            - type: string
+              enum:
+                - sov
+                - cheqd
+            - type: 'null'
+          title: Did Method
+          description: The DID method to use for onboarding the tenant (only used for issuers)
+          default: sov
+          examples:
+            - sov
+            - cheqd
       type: object
       required:
         - wallet_label
